[tool.poetry]
name = "blackfast"
version = "2018.07.1"
description = ""
authors = ["Jonas Obrist <jonas.obrist@hde.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^18.3-alpha.0"
attrs = "^18.1"
appdirs = "^1.4"
click = "^6.7"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
mypy = "^0.610.0"
pytest-asyncio = "^0.8.0"
tabulate = "^0.8.2"
poetry = "^0.11.3"
pytoml = "^0.1.18"

[tool.poetry.scripts]
blackfast-server = "blackfast.server:cli"
